--- a/site/archive.html
+++ b/site/archive.html
@@ -68,6 +68,11 @@
         <ul class="group-list">
             
                 <li>
+                    <a href="archive-2026.html">2026</a>
+                    <span style="color:#888; font-size:0.95em;">(1)</span>
+                </li>
+            
+                <li>
                     <a href="archive-2025.html">2025</a>
                     <span style="color:#888; font-size:0.95em;">(6)</span>
                 </li>
